Fix dropdown menus overlapping (#82)

--- a/choretracker/static/styles.css
+++ b/choretracker/static/styles.css
@@ -81,6 +81,7 @@ h1 .icon {
     right: 0;
     background-color: #ffffff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
 }
 
 .dropdown.show,
